r2/r2/public/static/css/reddit.less
/* ... */
#moderator_invite .permissions { width: 30ex; }
.permissions > form { display: none; }

.permission-summary {
    display: inline-block;
    font-size: small;
    border: 1px solid white;
}
.permission-summary.edited { border: dashed 1px black; }
.permission-bit.added { font-weight: bold; }
.permission-bit.removed { text-decoration: line-through; }
.permission-bit.none { font-style: italic; }

.permissions-edit { font-size: x-small; }

.permission-selector {
    border: 1px solid black;
    background-color: white;
    position: absolute;
    width: 24ex;
}
.permission-selector.active { display: block; }
.permission-selector label {
    display: block; text-align: left;
    padding: 0px 2px 1px 2px;
}
.permission-selector label:first-child { border-bottom: 1px solid black; }
.permission-selector label:hover { background-color: #bbb; }
.permission-selector label.disabled { background-color: #ddd; }
.permission-selector form { text-align: right; }
.permission-selector .status, .permission-selector .error {
    text-align: left;
    white-space: normal;
}

.light-button {
    background: none;
    border: 1px solid #777;
    border-radius: 3px;
    box-shadow: 0 1px 1px rgba(0, 0, 0, .25);
    opacity: .75;

    &:active {
        position: relative;
        top: 1px;
        box-shadow: none;
    }
}

.light-text-input {
    background: white;
    border: 1px solid #ccc;
    padding: 2px 5px;
}

body.with-listing-chooser {
    position: relative;

    & #header .tabmenu {
        li:first-child.selected {
            margin-left: 2px;
        }
    }

    & #header .pagename {
        position: absolute;
        left: 130px;
        bottom: 20px;
    }

    & > .content, & .footer-parent {
        margin-left: 140px
    }
}

.listing-chooser {
    @width: 130px;
    @shadow-width: 4px;
    position: absolute;
    top: 65px;
    left: 0;
    bottom: 0;
    width: @width;
    border-right: 1px solid #ccc;
    background: #f7f7f7;

    &:after {
        content: '';
        position: absolute;
        right: 0;
        top: 0;
        bottom: 0;
        left: @width - @shadow-width;
        box-shadow: -@shadow-width 0 2*@shadow-width -@shadow-width rgba(0, 0, 0, .3) inset;
        z-index: 20;
    }

    h3 {
        color: #777;
        text-align: right;
        padding: 4px;
    }

    ul.global, ul.other {
        padding: 8px 0;
        li {
            margin-left: 4px;

            a {
                font-size: 1.3em;
                padding: 1em 5px;
                padding-left: 12px;
            }
        }
    }

    ul.other {
        margin-top: 10px;
    }

    ul.multis {
        li {
            margin-left: 12px;
            .transition(all, 0.15s);

            &:hover {
                margin-left: 9px;
                padding-right: 10px;
            }

            a {
                font-size: 1.2em;
                padding: .8em 5px;
                padding-left: 10px;
            }
        }
    }

    li {
        text-align: left;
        margin-bottom: 3px;
        background: #fff;
        border: 1px solid #ccc;
        border-bottom-width: 2px;
        border-right: none;
        border-top-left-radius: 5px;
        border-bottom-left-radius: 5px;

        a {
            display: block;
            position: relative;
            overflow: hidden;
            text-overflow: ellipsis;
            margin-right: 5px;

            .description {
                color: gray;
                font-size: .8em;
                font-weight: normal;
            }
        }

        &:last-child a {
            border-bottom: none;
        }

        &.selected {
            position: relative;
            background: lighten(#cee3f8, 6%);
            border-color: lighten(#369, 40%);
            z-index: 25;

            a {
                font-weight: bold;
            }

            &:after,
            &:before {
                position: absolute;
                top: 50%;
                margin-top: -15px;
                display: block;
                content: '';
                border: 15px solid transparent;
                border-style: solid solid outset; // mitigates firefox drawing a thicker arrow
                z-index: 25;
            }

            &:before {
                right: 0px;
                border-right-color: #ccc;
            }

            &:after {
                right: -2px;
                border-right-color: white;
            }
        }
    }


    .create {
        padding: 5px;

        input[type="text"] {
            .light-text-input;
            width: 95px;
            margin-bottom: 3px;
            display: none;
        }

        .error {
            margin: 4px 0;
        }

        button {
            display: inline;
            text-align: center;
            padding: 1px 4px;
            margin: 0;

            background: none;
            border: 1px solid #777;
            border-radius: 3px;
            opacity: .5;

            &:hover {
                opacity: .90;
            }

            &:active {
                background: #e9e9e9;
            }
        }

        button, .throbber {
            vertical-align: middle;
        }

        .throbber {
            float: right;
        }

        &.expanded {
            input[type="text"] {
                display: block;
            }

            button {
                .light-button;
            }
        }
    }
}

